--- a/src/components/widgets/widget_style.module.scss
+++ b/src/components/widgets/widget_style.module.scss
@@ -1,6 +1,8 @@
 // Globals
 $segment-view-width: 20vw;
 $text-view-width: 80vw;
+$content-height: 60vh;
+$primary-dark-blue: #1e4ace;
 
 .segmentPill {
     border-radius: 4px;
@@ -13,10 +15,39 @@ $text-view-width: 80vw;
     margin: .3rem;
 }
 
+.segmentPillOther {
+    transition: 0.3s;
+}
+
+.segmentPillOther:hover {
+    border: 1px solid $primary-dark-blue;
+    // padding: .4rem;
+}
+
+.segmentPillActive {
+    margin: .5rem 0;
+    border:2px green solid;
+    transition: 0.3s;
+    animation: pulse 1.5s infinite;
+  }
+  
+  @keyframes pulse {
+    0% {
+      -webkit-box-shadow: 0 0 0 0 rgba(0, 255, 38, 0.4);
+    }
+    70% {
+        -webkit-box-shadow: 0 0 0 10px rgba(255,0,0, 0);
+    }
+    100% {
+        -webkit-box-shadow: 0 0 0 0 rgba(255,0,0, 0);
+    }
+  }
+
 .segmentContainer {
     width: $segment-view-width;
     overflow-y:auto;
     text-align: end;
+    max-height: $content-height;
 }
 
 
