--- a/src/components/widgets/memory_board/memory_board_style.module.scss
+++ b/src/components/widgets/memory_board/memory_board_style.module.scss
@@ -12,3 +12,9 @@
 .cardLinks {
     text-decoration: none;
 }
+
+.boardCardActions {
+    position: absolute;
+    bottom: 1vh;
+    width: 100%;
+}
